crates/ark/src/lsp/snapshots/ark__lsp__symbols__tests__symbol_call_methods.snap
---
source: crates/ark/src/lsp/symbols.rs
expression: "test_symbol(\"\n# section ----\nlist(\n    foo = function() {\n        1\n    }, # matched\n    function() {\n        2\n    }, # not matched\n    bar = function() {\n        3\n    }, # matched\n    baz = (function() {\n        4\n    }) # not matched\n)\n\")"
---
[
    DocumentSymbol {
        name: "section",
        detail: None,
        kind: String,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 15,
                character: 1,
            },
        },
        selection_range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 15,
                character: 1,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "foo",
                    detail: Some(
                        "function()",
                    ),
                    kind: Method,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 3,
                            character: 10,
                        },
                        end: Position {
                            line: 5,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 3,
                            character: 10,
                        },
                        end: Position {
                            line: 5,
                            character: 5,
                        },
                    },
                    children: Some(
                        [],
                    ),
                },
                DocumentSymbol {
                    name: "bar",
                    detail: Some(
                        "function()",
                    ),
                    kind: Method,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 9,
                            character: 10,
                        },
                        end: Position {
                            line: 11,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 9,
                            character: 10,
                        },
                        end: Position {
                            line: 11,
                            character: 5,
                        },
                    },
                    children: Some(
                        [],
                    ),
                },
            ],
        ),
    },
]
