crates/ark/src/lsp/snapshots/ark__lsp__symbols__tests__symbol_call_test_that.snap
---
source: crates/ark/src/lsp/symbols.rs
expression: "test_symbol(\"\ntest_that_not('foo', {\n  1\n})\n\n# title ----\n\ntest_that('foo', {\n  # title1 ----\n  1\n  # title2 ----\n  foo <- function() {\n    2\n  }\n})\n\n# title2 ----\ntest_that('bar', {\n  1\n})\n\")"
---
[
    DocumentSymbol {
        name: "title",
        detail: None,
        kind: String,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 15,
                character: 0,
            },
        },
        selection_range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 15,
                character: 0,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "foo",
                    detail: None,
                    kind: Function,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 7,
                            character: 0,
                        },
                        end: Position {
                            line: 14,
                            character: 2,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 7,
                            character: 0,
                        },
                        end: Position {
                            line: 14,
                            character: 2,
                        },
                    },
                    children: Some(
                        [
                            DocumentSymbol {
                                name: "title1",
                                detail: None,
                                kind: String,
                                tags: None,
                                deprecated: None,
                                range: Range {
                                    start: Position {
                                        line: 8,
                                        character: 2,
                                    },
                                    end: Position {
                                        line: 9,
                                        character: 3,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 8,
                                        character: 2,
                                    },
                                    end: Position {
                                        line: 9,
                                        character: 3,
                                    },
                                },
                                children: Some(
                                    [],
                                ),
                            },
                            DocumentSymbol {
                                name: "title2",
                                detail: None,
                                kind: String,
                                tags: None,
                                deprecated: None,
                                range: Range {
                                    start: Position {
                                        line: 10,
                                        character: 2,
                                    },
                                    end: Position {
                                        line: 13,
                                        character: 3,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 10,
                                        character: 2,
                                    },
                                    end: Position {
                                        line: 13,
                                        character: 3,
                                    },
                                },
                                children: Some(
                                    [
                                        DocumentSymbol {
                                            name: "foo",
                                            detail: Some(
                                                "function()",
                                            ),
                                            kind: Function,
                                            tags: None,
                                            deprecated: None,
                                            range: Range {
                                                start: Position {
                                                    line: 11,
                                                    character: 2,
                                                },
                                                end: Position {
                                                    line: 13,
                                                    character: 3,
                                                },
                                            },
                                            selection_range: Range {
                                                start: Position {
                                                    line: 11,
                                                    character: 2,
                                                },
                                                end: Position {
                                                    line: 13,
                                                    character: 3,
                                                },
                                            },
                                            children: Some(
                                                [],
                                            ),
                                        },
                                    ],
                                ),
                            },
                        ],
                    ),
                },
            ],
        ),
    },
    DocumentSymbol {
        name: "title2",
        detail: None,
        kind: String,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 16,
                character: 0,
            },
            end: Position {
                line: 19,
                character: 2,
            },
        },
        selection_range: Range {
            start: Position {
                line: 16,
                character: 0,
            },
            end: Position {
                line: 19,
                character: 2,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "bar",
                    detail: None,
                    kind: Function,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 17,
                            character: 0,
                        },
                        end: Position {
                            line: 19,
                            character: 2,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 17,
                            character: 0,
                        },
                        end: Position {
                            line: 19,
                            character: 2,
                        },
                    },
                    children: Some(
                        [],
                    ),
                },
            ],
        ),
    },
]
